Removed comment for accessibility issue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span>0 GB</span>
         <span>1000 GB</span>
       </div>
-      <div class="left">  <!--    <-----for the indication box -->
+      <div class="left">
         <p><span>185</span>GB LEFT</p>
       </div>
     </div>
